# brant2

./: .env.docker  .env.example  .gitignore  AUDIT_COMPARISON_REPORT.md  BROWSER_TEST_REPORT.md  CHANGELOG.md  COMPLETE_TEST_EXECUTION_REPORT.md  DEPLOYMENT.md  Dockerfile  FINAL_IMPLEMENTATION_REPORT.md  HYBRID_INTEGRATION_COMPLETE.md  MCDONALDS_TEST_COMPREHENSIVE_REPORT.md  Makefile  NEW_PIPELINE_README.md  OCR_PIPELINE_ISSUES_REPORT.md  PDF_PIPELINE_ISSUES_REPORT.md  PDF_PIPELINE_TEST_REPORT.md  PROCESSING_FLOW_AUDIT_REPORT.md  README.md  ROOF_MEASUREMENT_APPROACHES.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_AUDIT_FIX_PLAN.md  SECURITY_FIXES_IMPLEMENTED.md  SESSION_SUMMARY.md  TEST_EXECUTION_REPORT.md  TEST_README.md  WEEKLY_CHANGELOG.md  automated_mcdonalds_full_test_results.json  backend.Dockerfile  check_doc_status.py  check_schema.py  cloudbuild.yaml  create_db_schema.py  create_document_ai_processor.py  create_test_pdf.py  cursor_rules_setup.bat  demo_upload_test.py  deploy_test.sh  docker-compose.test.yml  docker-compose.yml  (+46 more)
.claude/: settings.json  settings.local.json
.tasks/: 2025-09-15_1_brant-roofing-system-ai-agent.md  2025-09-15_2_brant-roofing-system-ai-agent.md  2025-09-16_1_brant-roofing-system-ai-agent.md
app/: create_tables.py  main.py  test_server.py
build-documents/: brant_docker_compose.txt  comprehensive_setup_prompt.md  env_gcp_template.sh  proper_cursor_mdc_rule.md  setup_instructions.md  v0_frontend_prompt.md
deployment/: GCP_INFRASTRUCTURE.tf  cloudbuild.yaml  deploy_test.sh  setup-cloud-sql-proxy.sh  test-cloud-sql-proxy.sh
(+222 files in other folders)
