[tool.poetry]
name = "brant-roofing-system"
version = "0.1.0"
description = "AI-powered roofing estimation system"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.7"
asyncpg = "^0.29.0"
celery = {extras = ["redis"], version = "^5.3.4"}
redis = "^5.0.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pdf2image = "^1.17.0"
pytesseract = "^0.3.10"
pillow = "^10.4.0"
pypdf = "^4.2.0"
anthropic = "^0.21.0"
google-cloud-documentai = "^2.20.0"
google-cloud-storage = "^2.10.0"
google-cloud-vision = "^3.0.0"
google-cloud-secret-manager = "^2.19.0"
tenacity = "^8.2.3"
opencv-python-headless = "^4.8.1.78"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"